--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta
+      name="google-site-verification"
+      content="CvHz0pUQOaGikkjmGG3Bzr7dYO3InB91Vswn3LR0eoc"
+    />
     <title>Notes</title>
   </head>
   <body>
